output is now selectable; readme added

--- a/culter.html
+++ b/culter.html
@@ -51,6 +51,11 @@ div{
 
 #output{
 	font-size: 120%;
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+	cursor: text;
 }
 
 #bgwrap{
