--- a/culter.html
+++ b/culter.html
@@ -146,6 +146,7 @@ function border(index)
 }
 </script>
 <head>
+<title>Cvlter</title>
 </head>
 <body onload="init()">
 <div id="bgwrap"><span id="background">⊕</span></div>
